[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Font/kongtext.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/nine_patch_2x.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/button_main_menu.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/button_retry.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/button_main_menu_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/button_retry_pressed.png" type="Texture" id=6]
[ext_resource path="res://Scenes/GameOverUI.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 8
font_data = ExtResource( 1 )

[node name="GameOverUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -90.0
margin_right = 180.0
margin_bottom = 90.0
script = ExtResource( 7 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 360.0
margin_bottom = 180.0
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 96, 96 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 360.0
margin_bottom = 180.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 360.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 108.0
margin_top = 37.0
margin_right = 252.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 5 )
text = "GAME OVER"
align = 1

[node name="YourScore" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 144.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 7 )
text = "
YOUR SCORE:
"
align = 1

[node name="CenterRetry" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 144.0
margin_bottom = 78.0

[node name="ButtonRetry" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterRetry"]
margin_left = 16.0
margin_right = 128.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )

[node name="CenterMainMenu" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 144.0
margin_bottom = 106.0

[node name="ButtonMainMenu" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterMainMenu"]
margin_left = 16.0
margin_right = 128.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterRetry/ButtonRetry" to="." method="_on_ButtonRetry_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterMainMenu/ButtonMainMenu" to="." method="_on_ButtonMainMenu_pressed"]
